# symply

./: README.md  pyproject.toml
project/app/backend/nota/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
project/app/backend/nota/migrations/: 0001_initial.py
project/app/backend/site/: apps.py  views.py
project/app/backend/site/paciente/: urls.py  views.py
project/app/backend/site/pscicologo/: urls.py  views.py
project/app/frontend/public/static/css/: custom.css  custom.css.map
project/app/frontend/public/static/js/: custom.js
project/app/frontend/templates/: base.html
project/app/frontend/templates/auth/: cadastro.html  login.html
project/app/frontend/templates/django/forms/: div.html
project/app/frontend/templates/site/: home.html
project/app/frontend/templates/site/common/: header.html  no_content.html
project/app/frontend/templates/site/nota/: cadastro.html  info.html  minhas_notas.html
project/authentication/: api.py  forms.py  models.py  urls.py  views.py
project/authentication/migrations/: 0001_initial.py  0002_customuser_change_password_alter_customuser_role.py
project/src/: settings.py  urls.py
sass/custom/: _buttons.scss  _card.scss  _colors.scss  _config.scss  _form.scss  _geral.scss  _header.scss  _table.scss  _widgets.scss  custom.scss
sass/custom/animations/: _animations.scss  _templates.scss
sass/custom/animations/templates/: _header.scss  _no-content.scss  _pulse.scss  _rise.scss  _shake-shake.scss
